# LRsplines

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  LICENSE  LR-splines.dox  README.md
Apps/: BezierExtract.cpp  Diagonal.cpp  LinearIndep.cpp  MakeWaterfall.cpp  PartitionOfUnityTest.cpp  RefinementUnchanged.cpp  StresstestEvaluation.cpp  StresstestRefinement.cpp  TensorComparison.cpp  TestLevelCounting.cpp  TestMatchingKnots.cpp  TestMaxTjoints.cpp  TestOrderElevate.cpp  TestReadWrite.cpp  TopologyRefinement.cpp  drawLRmesh.cpp  drawLRmultipatch.cpp  drawLocalPmesh.cpp  reduceContinuity.cpp  refine.cpp  testIntegral.cpp
Examples/: CMakeLists.txt  Hello_LRSpline.cpp
cmake/Modules/: FindGoTools.cmake  FindLRSpline.cmake  FindMatlab.cmake  UseMultiArch.cmake
cmake/Templates/: LRSplineConfig.cmake.in  LRSplineConfigVersion.cmake.in
debian/: changelog  control  copyright  liblrspline1-dev.install  rules
include/: Basisfunction.h  Element.h  LRSplineSurface.h  Meshline.h  Profiler.h
include/LRSpline/: Basisfunction.h  Element.h  ForwardClasses.h  HashSet.h  LRSpline.h  LRSplineSurface.h  LRSplineVolume.h  LRSpline_version.h.in  MeshRectangle.h  Meshline.h  Profiler.h  Streamable.h
src/: Basisfunction.cpp  Element.cpp  LRSpline.cpp  LRSplineSurface.cpp  LRSplineVolume.cpp  MeshRectangle.cpp  Meshline.cpp  Profiler.cpp
src/matlab/: LRSplineSurface.m  class_handle.hpp  lrsplinesurface_interface.cpp
test/: LinDep_elongation.inp  LinDep_elongation.reg  LinDep_newline.reg  corner_refine.inp  corner_refine.reg  cross_1_5_m1.inp  cross_1_5_m1.reg  cross_1_5_m2.inp  cross_1_5_m2.reg  fixupdebs.sh.in  linear_dependant.reg  lrspline.txt  mesh.eps  one_third_raise_mult.inp  one_third_raise_mult.reg  one_third_start_at.inp  one_third_start_at.reg  regtest.sh
test/Diagonal/: fullspan_p3_m1.reg  minspan_p3_m1.reg  minspan_p3_m3.reg  struct_p3_m1.reg
test/Integrals/: surf_p33.reg  vol_p333.reg
test/LinearIndep/: Pettersen_InitPaper.lr  Pettersen_InitPaper.reg  Pettersen_InitPaper_Overload.reg
test/PartitionOfUnity/: defaults.reg  ghost_u.reg  ghost_u_vol.reg  ghost_v.reg  ghost_w_vol.reg  non_open.reg
test/RefinementUnchanged/: LinDep_newline.inp  article_example.inp  article_example.reg  cross_1_5_m1.inp  cross_1_5_m1.reg  discontinuous.inp  discontinuous.reg  extend_meshrect.inp  extend_meshrect.reg  mergeVol.inp  mergeVol.reg  overlap.inp  overlap.reg  overlap_w.inp  overlap_w.reg  vol_3cube_corner.inp  vol_3cube_corner.reg  volume_all_coved_by_one_meshrect.inp  volume_all_coved_by_one_meshrect.reg  volume_merging_rect.inp  volume_merging_rect.reg  volume_two_rect_corner_overlap.inp  volume_two_rect_corner_overlap.reg
test/TensorComparison/: p4q5.reg  vol_p345.reg
test/TestLevelCounting/: testSurf.reg  testVol.reg
test/TestReadWrite/: p3.reg  p3n50.reg  p3q6.reg  regtest.sh  vol_p345.reg
test/TopologyRefinement/: orderDep_2D.inp  orderDep_2D.reg  orderIndep_2D.inp  orderIndep_2D.reg  vol.inp  vol.reg
